manifest/demoteam/just-image-tag/acc/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: just-image-tag
    env: acc
    team: demoteam
  name: just-image-tag
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam
        app: just-image-tag
        env: acc
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - image: polarisit/ohj-test-project:v1.0.648
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        name: main
  selector:
    matchLabels:
      team: demoteam
      app: just-image-tag
      env: acc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: just-image-tag
    env: acc
    team: demoteam
  name: just-image-tag
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: just-image-tag.acc.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: just-image-tag
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: just-image-tag
    env: acc
    team: demoteam
  name: just-image-tag
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: just-image-tag
    env: acc
    team: demoteam
